# claude-nephoscope

./: .gitignore  CHANGELOG.md  README.md  install.py  pyproject.toml  pyrightconfig.json  sonar-project.properties
.claude-plugin/: marketplace.json  plugin.json
commands/: __init__.py  permissions.md  permissions_cmd.py
docs/: README.md  auto-approve-evaluation-guide.md  contributing.md  credential-leak-coverage.md  daily-use.md  future-ideas.md  getting-started.md  how-it-works.md  recipes.md  reference.md
hooks/: bootstrap.sh  hooks.json
learners/instinct/: summarize.py
learners/permission/: canonicalize.py  deny.py  hook.py  hook.sh  learner.py  seed.py
learners/permission/config/: deny.yaml
learners/permission/config/fixtures/: safe_shapes.yaml
learners/permission/match/: __init__.py  _types.py  bash.py  file.py  flat.py  mcp.py  orchestration.py
learners/permission/scripts/: review.sh
lib/: db.py  gc_sessions.py  prune.py  schema.sql  scope.py  sweep.py
lib/mirror/: __init__.py  ingester.py  reconcile.py  serializer.py  writer.py
lib/schema/: v1.sql  v10.sql  v11.sql  v12.sql  v13.sql  v2.sql  v3.sql  v4.sql  v5.sql  v6.sql  v7.sql  v8.sql  v9.sql
recorder/: run.py  run.sh
scripts/: migrate_numeric_flags.py  setup.sh
src/nephoscope/: config.py
src/nephoscope/cli/: init_cmd.py  main.py  migrate_cmd.py  observer_cmd.py  permissions_cmd.py  review_cmd.py
src/nephoscope/hooks/: output_scanner.py
src/nephoscope/learners/instinct/: summarize.py
src/nephoscope/learners/instinct/scripts/: start-observer.sh
src/nephoscope/learners/permission/: canonicalize.py  deny.py  evaluate.py  hook.py  learner.py  profiles.py  seed.py
src/nephoscope/learners/permission/config/: deny.yaml  learner.toml
src/nephoscope/learners/permission/config/fixtures/: credential_leaks.yaml  safe_shapes.yaml  secret_manager_standalones.yaml
src/nephoscope/learners/permission/config/fixtures/meta-profiles/: credential-file-tools.yaml  dev-tools.yaml  devops.yaml  git.yaml  javascript.yaml  project-dev.yaml  python-dev.yaml
src/nephoscope/learners/permission/config/fixtures/optional/: dev-tools.yaml  devops.yaml  javascript.yaml  project-dev.yaml  python-dev.yaml
src/nephoscope/learners/permission/config/fixtures/profiles/: core.yaml  javascript.yaml  python.yaml  secrets-management.yaml  shell-scripting.yaml  task-runners.yaml
src/nephoscope/learners/permission/match/: __init__.py  bash.py  file.py  flat.py  mcp.py  orchestration.py
src/nephoscope/learners/permission/scripts/: review.sh
src/nephoscope/lib/: db.py  gc_sessions.py  paths.py  prune.py  schema.sql  scope.py  sweep.py
src/nephoscope/lib/mirror/: __init__.py  ingester.py  permissions_hash.py  reconcile.py  serializer.py  tool_class.py  writer.py
src/nephoscope/lib/scanner/: output_scanner.yaml  patterns.py  redact.py
src/nephoscope/recorder/: run.py
tests/: conftest.py  test_live_db_isolation.py  test_open_source_hygiene.py
tests/cli/: test_main.py
tests/commands/: test_init_cmd.py  test_observer_cmd.py  test_permissions_cmd.py  test_review_cmd.py
tests/hooks/: test_hooks_json.py  test_output_scanner.py
tests/integration/: test_env_var_resolution_to_match.py  test_full_flow.py  test_init_cmd_profiles.py  test_project_path_tool_approval.py  test_review_session_filter.py  test_rm_trusted_dir.py
tests/learners/instinct/: test_summarize.py
tests/learners/permission/: conftest.py  test_apply_verb_types.py  test_canonicalize.py  test_deny.py  test_file_matcher.py  test_generalize_path_spec.py  test_hook.py  test_learner.py  test_learner_path_candidates.py  test_learner_sync.py  test_matcher_dispatch.py  test_positional_paths.py  test_profiles.py  test_scope_aware_permissions.py  test_script_runner_canonicalize.py  test_seed.py  test_session_approval.py
tests/lib/: test_db_helpers.py  test_paths.py  test_prune.py  test_schema_extension.py  test_schema_seeds.py  test_scope.py  test_scope_extra_dirs.py  test_stats.py  test_sweep.py
tests/lib/mirror/: test_ingester.py  test_permissions_hash.py  test_reconcile.py  test_serializer.py  test_writer.py  test_writer_workspace_roots.py
tests/lib/scanner/: test_patterns.py  test_redact.py
tests/recorder/: test_hook_contract.py  test_recorder.py  test_scope_recording.py  test_session_start.py
tests/unit/: test_ask_pending_audit_trail.py  test_canonicalize_env_resolution.py  test_dispatch_non_bash_matching.py  test_evaluate.py  test_file_matcher_specificity.py  test_flags_subset_match.py  test_init_optional_profiles.py  test_init_workspace_prompts.py  test_install_py.py  test_learner_deny_no_gate.py  test_migrate_cmd.py  test_normalize_flags.py  test_optional_fixtures.py  test_path_spec_additional_dir_named.py  test_path_spec_trusted_dir.py  test_permissions_cmd_coverage.py  test_permissions_status.py  test_project_tier_settings_path.py  test_rule_hit_counters.py  test_safe_shapes_fixture.py  test_verb_categories_schema.py  test_verb_groups.py  test_workspace_config.py
