[project]
name = "nephoscope"
version = "0.1.0"
description = "Cloud-observation instrument for Claude Code — session recording, permission learning, and behavioural pattern extraction"
requires-python = ">=3.10"
dependencies = ["bashlex", "pyyaml"]
license = { text = "Apache-2.0" }
authors = [{ name = "Steve Guns" }]
keywords = ["claude", "claude-code", "observability", "permissions", "hooks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage   = "https://github.com/bedezign/nephoscope"
Repository = "https://github.com/bedezign/nephoscope"
Issues     = "https://github.com/bedezign/nephoscope/issues"

[project.scripts]
nephoscope-recorder          = "nephoscope.recorder.run:main"
nephoscope-permissions-hook  = "nephoscope.learners.permission.hook:main"
nephoscope-learn             = "nephoscope.learners.permission.learner:main"
nephoscope-summarize         = "nephoscope.learners.instinct.summarize:main"
nephoscope-permissions       = "nephoscope.cli.permissions_cmd:main"
nephoscope-init              = "nephoscope.cli.init_cmd:main"
nephoscope-review            = "nephoscope.cli.review_cmd:main"
nephoscope-observer          = "nephoscope.cli.observer_cmd:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
