[project]
name = "nephoscope"
version = "0.3.2"
description = "Cloud-observation instrument for Claude Code — session recording, permission learning, and behavioural pattern extraction"
requires-python = ">=3.11"
dependencies = ["bashlex", "pyyaml"]
license = "Apache-2.0"
authors = [{ name = "Steve Guns" }]
keywords = ["claude", "claude-code", "observability", "permissions", "hooks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage   = "https://github.com/bedezign/nephoscope"
Repository = "https://github.com/bedezign/nephoscope"
Issues     = "https://github.com/bedezign/nephoscope/issues"

[project.scripts]
nephoscope                   = "nephoscope.cli.main:main"
nephoscope-recorder          = "nephoscope.recorder.run:main"
nephoscope-permissions-hook  = "nephoscope.learners.permission.hook:main"
nephoscope-learn             = "nephoscope.learners.permission.learner:main"
nephoscope-summarize         = "nephoscope.learners.instinct.summarize:main"
nephoscope-permissions       = "nephoscope.cli.permissions_cmd:main"
nephoscope-init              = "nephoscope.cli.init_cmd:main"
nephoscope-review            = "nephoscope.cli.review_cmd:main"
nephoscope-observer          = "nephoscope.cli.observer_cmd:main"
nephoscope-profiles          = "nephoscope.learners.permission.profiles:main"
nephoscope-migrate           = "nephoscope.cli.migrate_cmd:main"
nephoscope-output-scanner    = "nephoscope.hooks.output_scanner:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nephoscope = [
    "lib/schema.sql",
    "learners/permission/config/*.toml",
    "learners/permission/config/*.yaml",
    "learners/permission/config/fixtures/*.yaml",
    "learners/permission/config/fixtures/profiles/*.yaml",
    "learners/permission/config/fixtures/meta-profiles/*.yaml",
    "lib/scanner/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/nephoscope"]
branch = true
relative_files = true
omit = [
    "src/nephoscope/learners/permission/tests/*",
    "*/__init__.py",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
